syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "google/api/annotations.proto";

import "common_entities.proto";

option go_package = "./;wgpb";

service PeerService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "Service to configure wireguard peers"
  };

  rpc Add(AddPeerRequest) returns (EntityIdRequest) {
    option (google.api.http) = {
      post: "/api/peers"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Add peer"
      description: "Add peer to the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc Remove(EntityIdRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/peers/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Remove peer by id"
      description: "Remove peer by id from the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc Update(UpdatePeerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/api/peers/{peer.id}"
      body: "*"
      additional_bindings {
        patch: "/api/peers/{peer.id}"
        body: "peer"
      }
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update peer by id"
      description: "Update peer by id on the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc Get(EntityIdRequest) returns (Peer) {
    option (google.api.http) = {
      get: "/api/peers/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get peer by id"
      description: "Get peer by id from the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc GetAll(GetPeersRequest) returns (GetPeersResponse) {
    option (google.api.http) = {
      get: "/api/peers"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get peers"
      description: "Get peers from the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc Enable(EntityIdRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/peers/{id}/enable"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Enable peer by id"
      description: "Enable peer by id from the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc Disable(EntityIdRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/api/peers/{id}/disable"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Disable peer by id"
      description: "Disable peer by id from the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc DownloadConfig(EntityIdRequest) returns (DownloadFileResponse) {
    option (google.api.http) = {
      get: "/api/peers/{id}/config"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Download peer config by id"
      description: "Download peer config by id from the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };

  rpc DownloadQRCode(EntityIdRequest) returns (DownloadFileResponse) {
    option (google.api.http) = {
      get: "/api/peers/{id}/qr"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Download peer qr-code by id"
      description: "Download peer qr-code by id from the server."
      tags: "PeerService"
      security: {
        security_requirement: {
          key: "ApiKeyAuth";
          value: {}
        }
      }
    };
  };
}

message Peer {
  string id = 1;
  string device_id = 2;
  string name = 3;
  string email = 4;
  string public_key = 5;
  string endpoint = 6;
  int32 persistent_keep_alive = 7;
  repeated string allowed_ips = 8;
  uint32 protocol_version = 9;
  int64 receive_bytes = 10;
  int64 transmit_bytes = 11;
  google.protobuf.Timestamp last_handshake = 12;
  bool has_preshared_key = 13;
  bool is_enabled = 14;
  bool is_active = 15;
  string description = 16;
  string dns = 17;
  int32 mtu = 18;
}

message PeerAbridged {
  string id = 1;
  string device_id = 2;
  string name = 3;
  string email = 4;
  string public_key = 5;
  int32 persistent_keep_alive = 6;
  repeated string allowed_ips = 7;
  bool has_preshared_key = 8;
  bool is_enabled = 9;
  string description = 10;
  string dns = 11;
  int32 mtu = 12;
}

message AddPeerRequest {
  string device_id = 1;
  bool add_preshared_key = 2;
  int32 persistent_keep_alive = 3;
  string description = 4;
  string name = 5;
  string email = 6;
  string dns = 7;
  int32 mtu = 8;
}

message UpdatePeerData {
  string id = 1;
  bool add_preshared_key = 2;
  bool remove_preshared_key = 3;
  int32 persistent_keep_alive = 4;
  string description = 5;
  string name = 6;
  string email = 7;
  string dns = 8;
  int32 mtu = 9;
}

message UpdatePeerRequest {
  UpdatePeerData peer = 1;
  google.protobuf.FieldMask field_mask = 2;
}

message GetPeersRequest {
  int32 skip = 1;
  int32 limit = 2;
  string search = 3;
  string device_id = 4;
}

message GetPeersResponse {
  repeated PeerAbridged peers = 1;
  int32 total = 2;
  bool has_next = 3;
}

message DownloadFileResponse {
  string name = 1;
  int64 size = 2;
  bytes data = 3;
}
